<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>no.lau.vdvil</groupId>
    <artifactId>vdvil</artifactId>
    <version>0.16.2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Vdvil Root</name>
    <description>Vdvil - Framework for multimedia structuring, composition and playback</description>
    <url>https://play.kompo.st</url>
    <licenses>
        <license>
            <name>Apache 2</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Stig Lau</name>
            <email>stig@lau.no</email>
            <url>https://stig.lau.no</url>
        </developer>
        <developer>
            <name>Konrad Beiske</name>
        </developer>
        <developer>
            <name>Michael Stokes</name>
        </developer>
        <developer>
            <name>And some more ppl which I'll have to add later!</name>
        </developer>
    </developers>

    <modules>
        <module>renderer</module>
        <module>renderer-v2</module>
        <module>composition-handler</module>
        <module>audio-renderer</module>
        <module>lyric-renderer</module>
        <module>image-renderer</module>
        <module>simple-cache</module>
        <module>json-parser</module>
        <!-- <module>play-gui-webstart-distribution</module> Commented out until v1.0-snapshot-7 is released-->
        <!--<module>play-gui</module> -->
        <module>binding-layer</module>
        <module>common-test</module>
        <module>common-utils</module>
        <module>deprecated-utils</module>
        <!--    <module>play-per-view</module> -->
    </modules>

    <!-- Common dependency management-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>audio-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>image-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>lyric-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>simple-cache</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>composition-handler</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>binding-layer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>common-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>deprecated-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>common-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>renderer-v2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.lau.vdvil</groupId>
                <artifactId>json-renderer</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.19</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.2.2</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>20041127.091804</version>
                <exclusions>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <version>4.13.1</version>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.33</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.33</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <excludedGroups>Deprecated</excludedGroups><!-- To be switched based on whether running on github/actions or naught -->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <!-- to use this functionality do
                    mvn clean deploy -DperformRelease
                    or
                    mvn clean release:prepare release:perform -DperformRelease -->
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
        </profile>
        <profile>
            <id>ex-integration</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>3.0.0-M5</version>
                            <configuration>
                                <excludedGroups>IntegrationTest</excludedGroups><!-- To be switched based on whether running on github/actions or naught -->
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
    
    <scm>
        <connection>scm:git:ssh://github.com/StigLau/vdvil.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/StigLau/vdvil.git</developerConnection>
        <url>https://github.com/StigLau/vdvil</url>
    </scm>
<!--
    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub StigLau Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/StigLau/vdvil</url>
        </repository>
    </distributionManagement>
</project>
